# dynbox-app

./: .eslintrc.json  .gitignore  LICENSE  README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml  updater.key
.github/: README.md
.github/workflows/: release.yml
script/: download-latest-rclone.js
scripts/: download-latest-rclone.js
src/: env.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: authorize.rs  autostart.rs  lib.rs  tray.rs  window.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/_components/: button.tsx  card.tsx  logo-mono.tsx  title-bar.tsx  ui-logger.tsx  updater-status.tsx
src/app/_components/icons/: FluentDismiss16Regular.tsx  FluentLineHorizontal116Regular.tsx  FluentSquare16Regular.tsx  FluentSquareMultiple16Regular.tsx
src/app/_components/ui/: switch.tsx
src/app/api/authorize/: route.ts
src/lib/: api-react.ts  api.d.ts  check-winfsp.ts  store.ts
src/lib/utils/: folder-name.ts
